compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__home_path.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"~/a\", \"inspect\")\nfn home_path(x: anything) -> Nil\n"
---
error: Invalid Nix module
  ┌─ /src/one/two.gleam:3:1
  │
3 │ fn home_path(x: anything) -> Nil
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `home_path` has an external Nix implementation but the module
path `~/a` is not valid. Currently, it must always be either an absolute
path (`/leading/slash.nix`) or a relative path (`./here.nix` or `../
top.nix`) with a restricted set of ASCII characters. To import from other
paths, re-export in an auxiliary Nix file instead.
